# jupyter-bbox-widget

./: .gitignore  MANIFEST.in  README.md  jsconfig.json  jupyter_bbox_widget.json  package-lock.json  package.json  postBuild  pyproject.toml  setup.py  tsconfig.json  vite.config.mjs  webpack.config.js
examples/: introduction.ipynb
examples/data_apps/panel/: README.md  tool.py
jupyter_bbox_widget/: __init__.py  _frontend.py  _version.py  bbox.py  example.py
jupyter_bbox_widget/nbextension/: __init__.py
jupyter_bbox_widget/nbextension/static/: extension.js
mock/: index.html
src/: App.svelte  BBox.svelte  BBoxWidget.svelte  Button.svelte  Rectangle.svelte  extension.ts  index.ts  mock.ts  plugin.ts  stores.ts  version.ts  widget.ts
src/jupyter_bbox_widget/: __init__.py  bbox.py
svelte/: BBox.svelte  BBoxWidget.svelte  Button.svelte  main.js  stores.js
