[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter_bbox_widget"
version = "0.6.0"
description = "A Jupyter widget for annotating images with bounding boxes"
requires-python = ">=3.7"
dependencies = ["anywidget>=0.9.0"]
readme = "README.md"
license = { file = "LICENSE.txt" }

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]

[project.urls]
Homepage = "https://github.com/gereleth/jupyter_bbox_widget"

[tool.hatch.build]
only-packages = true
artifacts = ["src/jupyter_bbox_widget/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/jupyter_bbox_widget/static/main.mjs"]
# skip-if-exists = ["src/jupyter_bbox_widget/static/main.mjs"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
